plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.shinhan'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	implementation 'com.openai:openai-java:2.13.1'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	compileOnly 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// JJWTplugins {
	//	id 'java'
	//	id 'org.springframework.boot' version '3.5.3'
	//	id 'io.spring.dependency-management' version '1.1.7'
	//}
	//
	//group = 'com.shinhan'
	//version = '0.0.1-SNAPSHOT'
	//
	//java {
	//	toolchain {
	//		languageVersion = JavaLanguageVersion.of(17)
	//	}
	//}
	//
	//configurations {
	//	compileOnly {
	//		extendsFrom annotationProcessor
	//	}
	//}
	//
	//repositories {
	//	mavenCentral()
	//}
	//
	//dependencies {
	//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	//	implementation 'org.springframework.boot:spring-boot-starter-validation'
	//	implementation 'org.springframework.boot:spring-boot-starter-web'
	//	compileOnly 'org.projectlombok:lombok'
	//	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	//	runtimeOnly 'com.h2database:h2'
	//	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	//	annotationProcessor 'org.projectlombok:lombok'
	//	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	//	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	//
	//	// JJWT
	//
	//	// jjwt
	//	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	//	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	//	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	//
	//	// bCrput
	//	implementation 'org.mindrot:jbcrypt:0.4'
	//
	//	// coolSMS(메시지 전송)
	//	implementation 'net.nurigo:sdk:4.3.2'
	//
	//	implementation 'com.github.ben-manes.caffeine:caffeine'
	//}
	//
	//tasks.named('test') {
	//	useJUnitPlatform()
	//}

	// jjwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// bCrput
	implementation 'org.mindrot:jbcrypt:0.4'

	// coolSMS(메시지 전송)
	implementation 'net.nurigo:sdk:4.3.2'

	implementation 'com.github.ben-manes.caffeine:caffeine'

	// webflux
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
}

tasks.named('test') {
	useJUnitPlatform()
}
